# etf

./: .gitignore  CMakeLists.txt  Makefile  README.md  breakpoints.lldb  memcheck.txt  memcheckagain.txt  memckBattle.txt  memckText.txt  new.txt  newboi.txt  newest.txt  trace.json  what.txt  yes.txt
.github/workflows/: build.yml
assets/: config.json
assets/aseprite/: atbBar.aseprite  atbBar.json  bBlackBird.aseprite  bBlackBird.json  battleTurnMarker.aseprite  battleTurnMarker.json  blackBird.aseprite  blackBird.json  debugPlayer.aseprite  player1.aseprite  player1.json  player1Battler.aseprite  player1Battler.json  player2.aseprite  player2.json  sword1.aseprite  sword1.json  uibase.aseprite
assets/battle/: battleGroups.json  battleLocations.json  battlers.json  stats.json
assets/lua/: test.lua
assets/tiled/: debugSouth.tmj  debugTown.tmj  debugTownHome.tmj  forest1.tmj  forest1.tmx  goonRpg.tiled-project  goonRpg.tiled-session  house.tsj  inside.tsj  outside.tsj  terrain.tsj
assets/tiled/templates/: BattleSpawn.tx  Exit.tx  Start.tx
assets/ui/: logos.json
cmake/: Info.plist
src/engine/: CMakeLists.txt
src/engine/include/Supergoon/: Bgm.hpp  Content.hpp  Events.hpp  Game.hpp  Input.hpp  Sound.hpp  Supergoon.hpp  Tween.hpp  Vector2.hpp  pch.hpp
src/engine/include/Supergoon/Aseprite/: AsepriteAnimation.hpp  AsepriteDocument.hpp
src/engine/include/Supergoon/Content/: Content.hpp  ContentRegistry.hpp  Font.hpp  Image.hpp  Sfx.hpp  Text.hpp
src/engine/include/Supergoon/ECS/: Gameobject.hpp
src/engine/include/Supergoon/ECS/Components/: AnimationComponent.hpp  CameraComponent.hpp  GameStateComponent.hpp  ImageComponent.hpp  LocationComponent.hpp  SolidComponent.hpp
src/engine/include/Supergoon/Graphics/: Graphics.hpp
src/engine/include/Supergoon/Interfaces/: Loader.hpp  Unloader.hpp
src/engine/include/Supergoon/Physics/: Physics.hpp  RigidbodyComponent.hpp  StaticObjectComponent.hpp  StaticSolidComponent.hpp
src/engine/include/Supergoon/Primitives/: Point.hpp  Rectangle.hpp
src/engine/include/Supergoon/Tween/: Sequence.hpp  Tween.hpp
src/engine/include/Supergoon/UI/: ImageObject.hpp  Panel.hpp  UI.hpp  UIHorizontalLayoutGroup.hpp  UIImage.hpp  UIObject.hpp  UIObjectAnimator.hpp  UIText.hpp
src/engine/include/Supergoon/Widgets/: Game.hpp  Global.hpp  Sound.hpp  UIWidget.hpp  Widgets.hpp
src/engine/include/Supergoon/World/: Level.hpp  Scene.hpp  TiledMap.hpp
src/engine/sound/: CMakeLists.txt
src/engine/sound/include/SupergoonEngine/: Bgm.h  Sfx.h
src/engine/sound/src/: Bgm.c  Sfx.c  Stream.c
src/engine/src/: Bgm.cpp  Content.cpp  Events.cpp  Game.cpp  Sound.cpp  Tween.cpp  main.cpp
src/engine/src/Aseprite/: AsepriteAnimation.cpp  AsepriteDocument.cpp
src/engine/src/Content/: AsepriteDocument.cpp  ContentRegistry.cpp  Font.cpp  Image.cpp  Sfx.cpp  Text.cpp
src/engine/src/ECS/: GameObject.cpp
src/engine/src/Graphics/: Graphics.cpp
src/engine/src/Physics/: Physics.cpp  RigidbodyComponent.cpp  StaticObjectComponent.cpp  StaticSolidComponent.cpp
src/engine/src/Tween/: Sequence.cpp  Tween.cpp
src/engine/src/UI/: ImageObject.cpp  Panel.cpp  UI.cpp  UIImage.cpp  UIObjectAnimator.cpp  UIText.cpp
src/engine/src/Widgets/: ConsoleWidget.cpp  Content.cpp  ContentWidget.cpp  Game.cpp  Global.cpp  LevelWidget.cpp  Sound.cpp  SoundWidget.cpp  UIWidget.cpp  Widgets.cpp
src/engine/src/World/: Level.cpp  Scene.cpp  TiledMap.cpp
src/game/: BlackjackGame.cpp  CMakeLists.txt  Directions.hpp  EscapeTheFate.cpp
src/game/Components/: AnimationComponent.hpp  BattleComponent.hpp  BattleLocationComponent.hpp  BattleZoneComponent.hpp  BattlerComponent.hpp  Components.cpp  Components.hpp  EnemyBattlerBlinkComponent.hpp  Image.hpp  Location.hpp  Player.hpp  PlayerComponent.hpp  PlayerExitComponent.hpp  PlayerInteractionComponent.hpp  PlayerSpawnComponent.hpp  SolidObjectComponent.hpp  TextInteractionComponent.hpp
src/game/Debug/: BattleWidget.cpp  BattleWidget.hpp  PlayerCollider.cpp  PlayerCollider.hpp
src/game/Entities/: Entities.cpp  PlayerExit.cpp  PlayerExit.hpp  PlayerStart.cpp  PlayerStart.hpp  Solid.cpp  Solid.hpp  TextInteraction.cpp  TextInteraction.hpp
src/game/Entities/Battle/: BattleAbility.hpp  BattleCommandArgs.hpp  BattleLocation.cpp  BattleLocation.hpp  BattleState.cpp  BattleState.hpp  BattleZone.cpp  BattleZone.hpp  Stats.hpp
src/game/Systems/: AsepriteSystem.cpp  AsepriteSystem.hpp  CameraSystem.cpp  CameraSystem.hpp  DebugDrawSystem.cpp  DebugDrawSystem.hpp  GameStateSystem.cpp  GameStateSystem.hpp  ImageSystem.cpp  ImageSystem.hpp  LocationSystem.cpp  LocationSystem.hpp  PlayerSystem.cpp  PlayerSystem.hpp  Systems.cpp  Systems.hpp  TextInteractionSystem.cpp  TextInteractionSystem.hpp
src/game/Systems/Battle/: .BattleUISystem.cpp.swn  .BattleUISystem.cpp.swo  BattleAbilitySystem.cpp  BattleAbilitySystem.hpp  BattleDamageSystem.cpp  BattleDamageSystem.hpp  BattleLocationSystem.cpp  BattleLocationSystem.hpp  BattleSystem.cpp  BattleSystem.hpp  BattleTurnMarkerSystem.cpp  BattleTurnMarkerSystem.hpp  BattleUISystem.cpp  BattleUISystem.hpp  BattleZoneSystem.cpp  BattleZoneSystem.hpp  EnemyBattlerAISystem.cpp  EnemyBattlerAISystem.hpp  EnterBattleSystem.cpp  EnterBattleSystem.hpp
src/game/UI/Battle/: BattlerDisplay.hpp
src/game/UI/Logos/: Logos.cpp  Logos.hpp
src/game/Utilities/: Events.cpp  Events.hpp  Utilities.cpp  Utilities.hpp
terraform/: backend.tf  cloudfront.tf  r53.tf  s3.tf
tools/: quick_build_times.py
